--- a/public/news.html
+++ b/public/news.html
@@ -13,7 +13,7 @@
 <body style="background:#e7e7e7">
 <div class="banner">
     <img src="img/guanggao.png" id="bannerImg">
-    <span class="bannertitle">前前前前前前前前前前前前前前前前前</span>
+    <span class="bannertitle">请重新选择浏览器打开页面</span>
     <div class="bannertime">
         <span class="date">2015-2-2 08:34:35</span>
         <!--<span class="time"></span>-->
@@ -25,7 +25,7 @@
 </div>
 <!--banner end-->
 <div class="cardbox">
-    <div class="card1">章鱼FM依然是一个电台章鱼FM依然是一个电台章鱼FM依然是一个电台章鱼FM依然是一个电台</div>
+    <div class="card1">头条百家简介：头条百家是今日头条的必备伴侣。你可以将今日头条/一点资讯等平台的资讯添加到头条百家的资讯专辑。头条百家帮助你智能挖掘来自微博/谷歌/知乎的最新资讯观点。</div>
     <!--<div class="card2">章鱼FM依然是一个电台章鱼FM依然是一个电台章鱼FM依然是一个电台章鱼FM依然是一个电台</div>-->
 </div>
 
@@ -128,7 +128,7 @@
 <!--</div>-->
 <!--point end-->
 <div class="footimg">
-    <img src="img/guanggao.png">
+     <a href="" id="footertu"><img src="img/guanggao.png"></a>
 </div>
 <!--<footer>-->
     <div class="footer">
@@ -140,7 +140,7 @@
             <div class="sword">今日头条 百家争鸣</div>
         </div>
         <div class="download">
-            <img src="img/download.png">
+            <a href="" id="download"><img src="img/download.png"></a>
         </div>
         <div class="close">
             <img src="img/close.png">
