change the title

--- a/public/news.html
+++ b/public/news.html
@@ -136,7 +136,7 @@
             <img src="img/logo.png">
         </div>
         <div class="footerword">
-            <div class="bigword">头条百家</div>
+            <div class="bigword">头条百家beta</div>
             <div class="sword">今日头条 百家争鸣</div>
         </div>
         <div class="download">
