--- a/public/error.html
+++ b/public/error.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
-<body>
-页面请求失败
+<style>
+    div{
+        width: 432px;height:auto;position: absolute;left: 50%;margin-left:-216px;top: 30%;
+    }
+    div img{
+        width: 100%;
+    }
+</style>
+<body style="background:#e7e7e7">
+<div id="error"><img src="img/404.png" alt=""/></div>
 </body>
 </html>
