--- a/public/news.html
+++ b/public/news.html
@@ -13,9 +13,10 @@
 <body style="background:#e7e7e7">
 <div class="banner">
     <img src="img/guanggao.png" id="bannerImg">
-    <span class="bannertitle">请重新选择浏览器打开页面</span>
+    <img src="img/yingdao.png" class="yingdao">
+    <span class="bannertitle"></span>
     <div class="bannertime">
-        <span class="date">2015-2-2 08:34:35</span>
+        <span class="date"></span>
         <!--<span class="time"></span>-->
         <!--<span class="wendu">-->
             <!--<img src="img/wendu.png"/>-->
@@ -136,7 +137,7 @@
             <img src="img/logo.png">
         </div>
         <div class="footerword">
-            <div class="bigword">头条百家beta</div>
+            <div class="bigword">头条百家</div>
             <div class="sword">今日头条 百家争鸣</div>
         </div>
         <div class="download">
