--- a/public/news.html
+++ b/public/news.html
@@ -147,6 +147,20 @@
             <img src="img/close.png">
         </div>
     </div>
+<div class="zhezhao">
+    <div class="zhezhaodownload">
+        <span>请下载我们的应用立即体验</span>
+        <div class="logodownload">
+            <img src="img/lgo.png">
+        </div>
+        <div class="down">
+            <a href=""><img src="img/download.png"></a>
+        </div>
+        <div class="closeB">
+            <img src="img/closeB.png">
+        </div>
+    </div>
+</div>
 <!--</footer>-->
 </body>
 </html>
