--- a/public/news.html
+++ b/public/news.html
@@ -13,7 +13,9 @@
 <body style="background:#e7e7e7">
 <div class="banner">
     <img src="img/guanggao.png" id="bannerImg">
-    <img src="img/yingdao.png" class="yingdao">
+    <div class="yingdao">
+        <img src="img/tishi.png">
+    </div>
     <span class="bannertitle"></span>
     <div class="bannertime">
         <span class="date"></span>
