--- a/public/news.html
+++ b/public/news.html
@@ -16,6 +16,7 @@
     <div class="yingdao">
         <img src="img/tishi.png">
     </div>
+    <div class="bannerzhe">
     <span class="bannertitle"></span>
     <div class="bannertime">
         <span class="date"></span>
@@ -25,6 +26,7 @@
             <!--<span class="wenduword">3456</span>-->
         <!--</span>-->
     </div>
+        </div>
 </div>
 <!--banner end-->
 <div class="cardbox">
