--- a/public/news.html
+++ b/public/news.html
@@ -133,7 +133,7 @@
 <!--</div>-->
 <!--point end-->
 <div class="footimg">
-     <a href="" id="footertu"><img src="img/guanggao.png"></a>
+     <a href="" id="footertu"><img src="img/downloadbottom.png"></a>
 </div>
 <!--<footer>-->
     <div class="footer">
