--- a/public/news.html
+++ b/public/news.html
@@ -30,7 +30,7 @@
 </div>
 <!--banner end-->
 <div class="cardbox">
-    <div class="card1">头条百家简介：头条百家是今日头条的必备伴侣。你可以将今日头条/一点资讯等平台的资讯添加到头条百家的资讯专辑。头条百家帮助你智能挖掘来自微博/谷歌/知乎的最新资讯观点。</div>
+    <!--<div class="card1">头条百家简介：头条百家是今日头条的必备伴侣。你可以将今日头条/一点资讯等平台的资讯添加到头条百家的资讯专辑。头条百家帮助你智能挖掘来自微博/谷歌/知乎的最新资讯观点。</div>-->
     <!--<div class="card2">章鱼FM依然是一个电台章鱼FM依然是一个电台章鱼FM依然是一个电台章鱼FM依然是一个电台</div>-->
 </div>
 
@@ -153,7 +153,7 @@
     </div>
 <div class="zhezhao">
     <div class="zhezhaodownload">
-        <span>请下载我们的应用立即体验</span>
+        <!--<span>请下载我们的应用立即体验</span>-->
         <div class="logodownload">
             <img src="img/lgo.png">
         </div>
