--- a/public/news.html
+++ b/public/news.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <script src="js/jquery.min.js"></script>
     <script src="js/index4.js"></script>
-    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/index2.css"/>
 </head>
 <body style="background:#e7e7e7">
 <div class="banner">
