--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 // android终端或者uc浏览器
                 android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1,
                 // 是否为iPhone或者QQHD浏览器
-                iPhone: u.indexOf('iPhone') > -1 ,
+                iPhone: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/) ,
                 // 是否iPad
                 iPad: u.indexOf('iPad') > -1
             };
