--- a/public/index2.html
+++ b/public/index2.html
@@ -29,7 +29,7 @@
     // 根据不同的终端，跳转到不同的地址
 //    var theUrl = 'http://www.baidufe.com';
     if(Terminal.platform.android){
-        theUrl = 'https://itunes.apple.com/us/app/tou-tiao-bai-jia/id987333155?l=zh&ls=1&mt=8';
+        theUrl = 'http://t.cn/RyflWxE';
     }else if(Terminal.platform.iPhone){
         theUrl = 'https://itunes.apple.com/us/app/tou-tiao-bai-jia/id987333155?l=zh&ls=1&mt=8';
     }else if(Terminal.platform.iPad){
