--- a/public/news.html
+++ b/public/news.html
@@ -10,7 +10,7 @@
     <script src="js/index6.js"></script>
     <link rel="stylesheet" href="css/index2.css"/>
 </head>
-<body style="background:#e7e7e7;padding-bottom:100px">
+<body style="background:#e7e7e7;">
 <div class="banner">
     <img src="img/guanggao.png" id="bannerImg">
     <div class="yingdao">
