--- a/public/bokexiangqing2.html
+++ b/public/bokexiangqing2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>团队博客</title>
     <link rel="stylesheet" href="css/boke.css"/>
     <script src="js/jquery-1.11.3.min.js"></script>
 </head>
