--- a/public/call.html
+++ b/public/call.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>联系我们</title>
     <link rel="stylesheet" href="css/boke.css"/>
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/nav.js"></script>
@@ -37,11 +37,11 @@
 </div>
 <div class="calltitle">头条百家</div>
 <div class="calljieshao">头条百家app这是一个新闻聚合类应用，通过头条百家app知晓目前国内外各行各业的大事件，大新闻，聚合互联网所有的
-今日热点头条资讯，并展示上百家的不同观点内容的新闻应用</div>
+今日热点头条资讯，并展示上百家的不同观点内容的新闻应用。</div>
 <div class="calllianxi">联系我们</div>
 <div class="calljieshao">
     邮箱：hr@toutiaobaojia.com<br>
-    微信：G24<br>
+    电话：010—84477818
     地址：北京市东城区东方银座B座25D
 </div>
 <div class="footer">Copyright @ 20002015 G24</div>
