--- a/public/join.html
+++ b/public/join.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>加入我们</title>
     <link rel="stylesheet" href="css/boke.css"/>
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/nav.js"></script>
@@ -47,6 +47,21 @@
         </div>
         <div class="zhiweineirong">
             <div class="tiaojian">
+                岗位职责：
+            </div>
+            <div class="tiaojian">
+                1、参与公司数据平台建模和分布式计算系统的设计和实现；
+            </div>
+            <div class="tiaojian">
+                2、参与推荐算法和推荐系统的设计与实现；
+            </div>
+            <div class="tiaojian">
+                3、参与文本聚类分类排重等算法的设计和实现；
+            </div>
+            <div class="tiaojian">
+                任职要求：
+            </div>
+            <div class="tiaojian">
                 1、计算机、数学等相关理科专业本科及以上学历，2年以上相关专业工作经验；
             </div>
             <div class="tiaojian">
@@ -64,6 +79,7 @@
             <div class="tiaojian">
                 6、有强烈责任感，主动性强，优秀的学习能力。
             </div>
+
             <div class="email">招聘邮箱：dongxx@falconnect.cn</div>
         </div>
     </div>
@@ -77,6 +93,33 @@
             <div class="zhiweidata">2015-09-10</div>
         </div>
         <div class="zhiweineirong">
+            <div class="tiaojian">
+                岗位职责：
+            </div>
+            <div class="tiaojian">
+                1、 审核记账凭证，及时准确地编制会计月报、季报、年报等各项相关报表；
+            </div>
+            <div class="tiaojian">
+                2、 负责每月税务申报、缴纳和年度汇算清缴等涉税事宜；
+            </div>
+            <div class="tiaojian">
+                3、 负责每月银行对账、现金盘点；
+            </div>
+            <div class="tiaojian">
+                4、 负责公司每月收入、支出、应收、应付等各种数据统计、内部报表；
+            </div>
+            <div class="tiaojian">
+                5、 负责公司合同的登记、统计及保管；
+            </div>
+            <div class="tiaojian">
+                6、 负责公司各种财务资料的整理、归档；
+            </div>
+            <div class="tiaojian">
+                7、 完成上级交办的其他任务。
+            </div>
+            <div class="tiaojian">
+                任职资格：
+            </div>
             <div class="tiaojian">
                 1、 财会、会计相关专业大专专科以上学历，3年以上工作经验，有会计初级职称；
             </div>
