--- a/public/call.html
+++ b/public/call.html
@@ -41,7 +41,8 @@
 <div class="calllianxi">联系我们</div>
 <div class="calljieshao">
     邮箱：hr@toutiaobaojia.com<br>
-    电话：010—84477818
+    电话：010—84477818<br>
+    商务合作：gujr@falconnect.cn<br>
     地址：北京市东城区东方银座B座25D
 </div>
 <div class="footer">Copyright @ 20002015 G24</div>
