--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 	<script src="js/index.js"></script>
 <script src="js/jquery.mousewheel.min.js"></script>
 <script src="js/ddfullscreenslider.js"></script>
+	<script src="js/prefixfree.min.js"></script>
+	<script src="js/modernizr.js"></script>
 </head>
 
 <body>
@@ -158,6 +160,9 @@
 
 			</div>
 		</article>
+	</div>
+	<div class="jia">
+		<div class='loader loader--glisteningWindow'></div>
 	</div>
 </section>
 </body>
