--- a/public/callP.html
+++ b/public/callP.html
@@ -12,7 +12,7 @@
     <div class="nav">
         <div class="logoBox">
             <div class="logoBox1">
-                <img src="img/deep%20source-icon-web%20%20.png">
+                <img src="img/deep.png">
             </div>
             <div class="logoBox2">
                 <img src="img/logoWord.png">
