--- a/public/project.html
+++ b/public/project.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>应用案例</title>
     <link rel="stylesheet" href="css/indexP.css"/>
     <script src="js/jquery.min.js"></script>
     <script src="js/indexP.js"></script>
