--- a/public/mainP.html
+++ b/public/mainP.html
@@ -46,7 +46,7 @@
         <a href="" style="width:110px"><img src="img/icon1.png"></a>
         <div class="iconWord1" style="font-size: 1.5em">深度订阅</div>
         <div class="iconWord2" style="font-size: 1.25em">追踪热点事件</div>
-        <div class="tiyanBox" style="width:25%">
+        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
             <a href="">
                 <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
                 <img src="img/jiantouHover.png">
@@ -57,7 +57,7 @@
         <a href="" style="width:110px"><img src="img/icon2.png"></a>
         <div class="iconWord1" style="font-size: 1.5em">句级别的内容聚类</div>
         <div class="iconWord2" style="font-size: 1.25em">精确到一句话的同类内容聚合</div>
-        <div class="tiyanBox" style="width:25%">
+        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
             <a href="">
                 <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
                 <img src="img/jiantouHover.png">
@@ -70,7 +70,7 @@
         <a href="" style="width:110px"><img src="img/icon3.png"></a>
         <div class="iconWord1" style="font-size: 1.5em">核心观点抽取</div>
         <div class="iconWord2" style="font-size: 1.25em">抽取长篇大论的中心思想</div>
-        <div class="tiyanBox" style="width:25%">
+        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
             <a href="">
                 <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
                 <img src="img/jiantouHover.png">
@@ -81,7 +81,7 @@
         <a href="" style="width:110px"><img src="img/icon4.png"></a>
         <div class="iconWord1" style="font-size: 1.5em">自动生成文章概要</div>
         <div class="iconWord2" style="font-size: 1.25em">让阅读更加简洁明了</div>
-        <div class="tiyanBox" style="width:25%">
+        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
             <a href="">
                 <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
                 <img src="img/jiantouHover.png">
@@ -94,7 +94,7 @@
         <a href="" style="width:110px"><img src="img/icon5.png"></a>
         <div class="iconWord1" style="font-size: 1.5em">定制信息关联挖掘</div>
         <div class="iconWord2" style="font-size: 1.25em">用数据为专业领域提供趋势分析</div>
-        <div class="tiyanBox" style="width:25%">
+        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
             <a href="">
                 <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
                 <img src="img/jiantouHover.png">
@@ -105,7 +105,7 @@
         <a href="" style="width:110px"><img src="img/icon6.png"></a>
         <div class="iconWord1" style="font-size: 1.5em">融合搜索服务</div>
         <div class="iconWord2" style="font-size: 1.25em">全网中英文资讯搜索</div>
-        <div class="tiyanBox" style="width:25%">
+        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
             <a href="">
                 <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
                 <img src="img/jiantouHover.png">
@@ -118,7 +118,7 @@
         <a href="" style="width:110px"><img src="img/icon7.png"></a>
         <div class="iconWord1" style="font-size: 1.5em">内容平台</div>
         <div class="iconWord2" style="font-size: 1.25em">挖掘并重组内容，赋予内容更高价值</div>
-        <div class="tiyanBox" style="width:25%">
+        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
             <a href="">
                 <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
                 <img src="img/jiantouHover.png">
@@ -129,7 +129,7 @@
         <a href="" style="width:110px"><img src="img/icon8.png"></a>
         <div class="iconWord1" style="font-size: 1.5em">情感分析</div>
         <div class="iconWord2" style="font-size: 1.25em">NLP为你提供真实有效的参考意见</div>
-        <div class="tiyanBox" style="width:25%">
+        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
             <a href="">
                 <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
                 <img src="img/jiantouHover.png">
