--- a/public/indexP.html
+++ b/public/indexP.html
@@ -41,7 +41,7 @@
         <img src="img/bannerweb.png">
         <div class="bannerWord1"></div>
         <div class="bannerWord2"></div>
-        <a class="bannerWord3" href="">开始使用</a>
+        <a class="bannerWord3" href="serveP.html">开始使用</a>
     </div>
 </div>
 <div class="mainBox">
@@ -170,7 +170,7 @@
             <div class="navWord">联系我们</div>
         </a></li>
     </ul>
-    <a class="beginP" href="">开始使用</a>
+    <a class="beginP" href="serveP.html">开始使用</a>
 </div>
 </body>
 </html>
