--- a/public/mainP.html
+++ b/public/mainP.html
@@ -38,9 +38,9 @@
         <div class="navWord">联系我们</div>
     </a></li>
 </ul>
-<div class="serve" style="font-size: 1.75em;margin-top:40px">我们的服务</div>
+<div class="serve" style="font-size:28px;margin-top:40px">我们的服务</div>
 <div class="mainPline"></div>
-<p class="mainPword" style="font-size:20px">深源互动平台是基于分布式计算的数据获取和数据分析平台，结合独特的语义分析技术, 一站式满足用户词性分析，实体识别，句子压缩，文章摘要提取，文本分类，文本聚类，情感分析，关键词提取等自然语言处理功能API，同时提供全网数据抓取，可定制数据抓取服务。用户能够基于本平台提供的API实现搜索、推荐、舆情分析、定向挖掘等高级应用，也能够与我们合作定制具有产品特色的语义分析解决方案。</p>
+<p class="mainPword" style="font-size:22px">深源互动平台是基于分布式计算的数据获取和数据分析平台，结合独特的语义分析技术, 一站式满足用户词性分析，实体识别，句子压缩，文章摘要提取，文本分类，文本聚类，情感分析，关键词提取等自然语言处理功能API，同时提供全网数据抓取，可定制数据抓取服务。用户能够基于本平台提供的API实现搜索、推荐、舆情分析、定向挖掘等高级应用，也能够与我们合作定制具有产品特色的语义分析解决方案。</p>
 <div class="iconBox" style="width:82%">
     <div class="iconInner" style="width:50%">
         <a href="serveP.html#1" style="width:110px"><img src="img/icon1.png"></a>
