--- a/public/serveP.html
+++ b/public/serveP.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>Document</title>
+    <title>我们的服务</title>
     <link rel="stylesheet" href="css/indexP.css"/>
-    <!--<link rel="stylesheet" href="css/phone.css"/>-->
     <script src="js/jquery.min.js"></script>
 </head>
 <body>
@@ -32,7 +31,7 @@
                 <div class="sanjiao" style="opacity: 1"></div>
                 <div class="underline" style="opacity: 1"></div>
             </a></li>
-            <li><a href="">深源首页
+            <li><a href="mainP.html">深源首页
                 <div class="sanjiao" ></div>
                 <div class="underline" ></div>
             </a></li>
@@ -88,29 +87,30 @@
             <div class="circle1p">青岛输油<br>管道爆炸</div>
             <div class="lineBoxp">
                 <div class="lineWboxp">
-                    <div class="lineTitlep">最终确认62人遇难</div>
+                    <div class="lineTitlep">青岛输油管道爆炸致6人遇难</div>
                     <div style="width:33.333%;height:100%;position: relative;float:right"><div class="lineCirclep"></div></div>
                     <div class="lineDatep">2013.11.22</div>
                 </div>
                 <div class="lineWboxp">
-                    <div class="lineTitlep">最终确认62人遇难</div>
+                    <div class="lineTitlep">9名责任人被警方控制
+                    </div>
                     <div style="width:33.333%;height:100%;position: relative;float:right"><div class="lineCirclep"></div></div>
-                    <div class="lineDatep">2013.11.22</div>
+                    <div class="lineDatep">11.28</div>
                 </div>
                 <div class="lineWboxp">
                     <div class="lineTitlep">最终确认62人遇难</div>
                     <div style="width:33.333%;height:100%;position: relative;float:right"><div class="lineCirclep"></div></div>
-                    <div class="lineDatep">2013.11.22</div>
+                    <div class="lineDatep">12.03</div>
                 </div>
                 <div class="lineWboxp">
-                    <div class="lineTitlep">最终确认62人遇难</div>
+                    <div class="lineTitlep">......</div>
                     <div style="width:33.333%;height:100%;position: relative;float:right"><div class="lineCirclep"></div></div>
-                    <div class="lineDatep">2013.11.22</div>
+                    <div class="lineDatep">......</div>
                 </div>
                 <div class="lineWboxp">
-                    <div class="lineTitlep">最终确认62人遇难</div>
+                    <div class="lineTitlep">中石化董事长及青岛市长被处分</div>
                     <div style="width:33.333%;height:100%;position: relative;float:right"><div class="lineCirclep"></div></div>
-                    <div class="lineDatep">2013.11.22</div>
+                    <div class="lineDatep">2014.1.10</div>
                 </div>
             </div>
             <!--<div class="circle2">-->
@@ -307,9 +307,9 @@
                     <img src="imgServe/card8.png">
                 </div>
                 <ul class="card82Word">
-                    <li>1、<span class="blue">希拉里</span>作为民主党参选代表许诺将兴建基础设施、创造更多就业机会作为竞选筹码...<span class="blue">得到</span>>了纽约州相当多民众的<span class="blue">支持</span>>等321万篇文章文章输出结果为可能当选</li>
-                    <li>2、2016年总统大选拉开帷幕，希拉里的竞争对手不仅得到幕后众多大资本家的支持更有相当可观的民意支持...<span class="blue">希拉里</span>>作为女性候选人<span class="blue">势单力薄</span>等140万篇文章输出结果是可能落败</li>
-                    <li>3、历史上任何一次竞选都是大资本家和政治家么押注和玩弄手段的舞台剧...普通民众在台下只需要鼓掌呐喊和<span class="blue">及时退场</span>就可以了等93万篇文章输出结果为对希拉里竞选结果不关心</li>
+                    <li>1、<span class="blue">希拉里</span>作为民主党参选代表许诺将兴建基础设施、创造更多就业机会作为竞选筹码...<span class="blue">得到</span>了纽约州相当多民众的<span class="blue">支持</span>等321万篇文章文章输出结果为可能当选</li>
+                    <li>2、2016年总统大选拉开帷幕，希拉里的竞争对手不仅得到幕后众多大资本家的支持更有相当可观的民意支持...<span class="blue">希拉里</span>作为女性候选人<span class="blue">势单力薄</span>等140万篇文章输出结果是可能落败</li>
+                    <li>3、历史上任何一次竞选都是大资本家和政治家么押注和玩弄手段的舞台剧...<span class="blue">普通民众</span>在台下只需要鼓掌呐喊和<span class="blue">及时退场</span>就可以了等93万篇文章输出结果为对希拉里竞选结果不关心</li>
                 </ul>
             </div>
             <div class="card6Jian" style="margin-top:-10px"></div>
