--- a/public/indexP.html
+++ b/public/indexP.html
@@ -170,7 +170,7 @@
             <div class="navWord">联系我们</div>
         </a></li>
     </ul>
-    <a class="beginP" href="serveP.html">开始使用</a>
+    <a class="beginP" href="mainP.html">开始使用</a>
 </div>
 </body>
 </html>
