--- a/public/indexP.html
+++ b/public/indexP.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>深源互动</title>
+    <meta name="keywords" content="大数据 聚合数据 统计学习 机器学习 自然语言处理 预测  开发者 自动化写作  定制个性化数据"/>
+    <meta name="description" content="深度整合资讯，高效连接信息和用户，国内最大的细分领域内容提供商"/>
+    <title>API数据接口_开发者数据定制_免费数据调用-深源互动</title>
     <link rel="stylesheet" href="css/indexP.css"/>
     <script src="js/jquery.min.js"></script>
     <script src="js/indexP.js"></script>
