--- a/public/indexP.html
+++ b/public/indexP.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="css/indexP.css"/>
     <script src="js/jquery.min.js"></script>
     <script src="js/indexP.js"></script>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "//hm.baidu.com/hm.js?29a000b556634acb4e03f00a9ca7cd24";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
 </head>
 <body>
 <div class="topBox">
