--- a/public/mainP.html
+++ b/public/mainP.html
@@ -53,23 +53,23 @@ var _hmt = _hmt || [];
 <p class="mainPword" style="font-size:22px">深源互动平台是基于分布式计算的数据获取和数据分析平台，结合独特的语义分析技术, 一站式满足用户词性分析，实体识别，句子压缩，文章摘要提取，文本分类，文本聚类，情感分析，关键词提取等自然语言处理功能API，同时提供全网数据抓取，可定制数据抓取服务。用户能够基于本平台提供的API实现搜索、推荐、舆情分析、定向挖掘等高级应用，也能够与我们合作定制具有产品特色的语义分析解决方案。</p>
 <div class="iconBox" style="width:82%">
     <div class="iconInner" style="width:50%">
-        <a href="serveP.html#1" style="width:110px"><img src="img/icon1.png"></a>
-        <div class="iconWord1" style="font-size: 1.5em">深度订阅</div>
-        <div class="iconWord2" style="font-size: 1.25em">追踪热点事件</div>
-        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
+        <a href="serveP.html#1" style="width:130px"><img src="img/icon1.png"></a>
+        <div class="iconWord1" style="font-size: 28px">深度订阅</div>
+        <div class="iconWord2" style="font-size: 24px">追踪热点事件</div>
+        <div class="tiyanBox">
             <a href="serveP.html#1">
-                <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
+                <span class="tiyan" style="color: #6cc1fb;font-size: 24px">立即体验</span>
                 <img src="img/jiantouHover.png">
             </a>
         </div>
     </div>
     <div class="iconInner" style="width:50%">
-        <a href="serveP.html#2" style="width:110px"><img src="img/icon2.png"></a>
-        <div class="iconWord1" style="font-size: 1.5em">句级别的内容聚类</div>
-        <div class="iconWord2" style="font-size: 1.25em">精确到一句话的同类内容聚合</div>
-        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
+        <a href="serveP.html#2" style="width:130px"><img src="img/icon2.png"></a>
+        <div class="iconWord1" style="font-size:28px">句级别的内容聚类</div>
+        <div class="iconWord2" style="font-size: 24px">精确到一句话的同类内容聚合</div>
+        <div class="tiyanBox">
             <a href="serveP.html#2">
-                <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
+                <span class="tiyan" style="color: #6cc1fb;font-size: 24px">立即体验</span>
                 <img src="img/jiantouHover.png">
             </a>
         </div>
@@ -77,23 +77,23 @@ var _hmt = _hmt || [];
 </div>
 <div class="iconBox" style="width:82%">
     <div class="iconInner" style="width:50%">
-        <a href="serveP.html#3" style="width:110px"><img src="img/icon3.png"></a>
-        <div class="iconWord1" style="font-size: 1.5em">核心观点抽取</div>
-        <div class="iconWord2" style="font-size: 1.25em">抽取长篇大论的中心思想</div>
-        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
+        <a href="serveP.html#3" style="width:130px"><img src="img/icon3.png"></a>
+        <div class="iconWord1" style="font-size: 28px">核心观点抽取</div>
+        <div class="iconWord2" style="font-size:24px">抽取长篇大论的中心思想</div>
+        <div class="tiyanBox">
             <a href="serveP.html#3">
-                <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
+                <span class="tiyan" style="color: #6cc1fb;font-size: 24px">立即体验</span>
                 <img src="img/jiantouHover.png">
             </a>
         </div>
     </div>
     <div class="iconInner" style="width:50%">
-        <a href="serveP.html#4" style="width:110px"><img src="img/icon4.png"></a>
-        <div class="iconWord1" style="font-size: 1.5em">自动生成文章概要</div>
-        <div class="iconWord2" style="font-size: 1.25em">让阅读更加简洁明了</div>
-        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
+        <a href="serveP.html#4" style="width:130px"><img src="img/icon4.png"></a>
+        <div class="iconWord1" style="font-size:28px">自动生成文章概要</div>
+        <div class="iconWord2" style="font-size: 24px">让阅读更加简洁明了</div>
+        <div class="tiyanBox">
             <a href="serveP.html#4">
-                <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
+                <span class="tiyan" style="color: #6cc1fb;font-size: 24px">立即体验</span>
                 <img src="img/jiantouHover.png">
             </a>
         </div>
@@ -101,23 +101,23 @@ var _hmt = _hmt || [];
 </div>
 <div class="iconBox" style="width:82%">
     <div class="iconInner" style="width:50%">
-        <a href="serveP.html#5" style="width:110px"><img src="img/icon5.png"></a>
-        <div class="iconWord1" style="font-size: 1.5em">定制信息关联挖掘</div>
-        <div class="iconWord2" style="font-size: 1.25em">用数据为专业领域提供趋势分析</div>
-        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
+        <a href="serveP.html#5" style="width:130px"><img src="img/icon5.png"></a>
+        <div class="iconWord1" style="font-size:28px">定制信息关联挖掘</div>
+        <div class="iconWord2" style="font-size:24px">用数据为专业领域提供趋势分析</div>
+        <div class="tiyanBox">
             <a href="serveP.html#5">
-                <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
+                <span class="tiyan" style="color: #6cc1fb;font-size: 24px">立即体验</span>
                 <img src="img/jiantouHover.png">
             </a>
         </div>
     </div>
     <div class="iconInner" style="width:50%">
-        <a href="serveP.html#6" style="width:110px"><img src="img/icon6.png"></a>
-        <div class="iconWord1" style="font-size: 1.5em">融合搜索服务</div>
-        <div class="iconWord2" style="font-size: 1.25em">全网中英文资讯搜索</div>
-        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
+        <a href="serveP.html#6" style="width:130px"><img src="img/icon6.png"></a>
+        <div class="iconWord1" style="font-size:28px">融合搜索服务</div>
+        <div class="iconWord2" style="font-size:24px">全网中英文资讯搜索</div>
+        <div class="tiyanBox">
             <a href="serveP.html#6">
-                <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
+                <span class="tiyan" style="color: #6cc1fb;font-size: 24px">立即体验</span>
                 <img src="img/jiantouHover.png">
             </a>
         </div>
@@ -125,23 +125,23 @@ var _hmt = _hmt || [];
 </div>
 <div class="iconBox" style="width:82%">
     <div class="iconInner" style="width:50%">
-        <a href="serveP.html#7" style="width:110px"><img src="img/icon7.png"></a>
-        <div class="iconWord1" style="font-size: 1.5em">内容平台</div>
-        <div class="iconWord2" style="font-size: 1.25em">挖掘并重组内容，赋予内容更高价值</div>
-        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
+        <a href="serveP.html#7" style="width:130px"><img src="img/icon7.png"></a>
+        <div class="iconWord1" style="font-size: 28px">内容平台</div>
+        <div class="iconWord2" style="font-size: 24px">挖掘并重组内容，赋予内容更高价值</div>
+        <div class="tiyanBox">
             <a href="serveP.html#7">
-                <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
+                <span class="tiyan" style="color: #6cc1fb;font-size: 24px">立即体验</span>
                 <img src="img/jiantouHover.png">
             </a>
         </div>
     </div>
     <div class="iconInner" style="width:50%">
-        <a href="serveP.html#8" style="width:110px"><img src="img/icon8.png"></a>
-        <div class="iconWord1" style="font-size: 1.5em">情感分析</div>
-        <div class="iconWord2" style="font-size: 1.25em">NLP为你提供真实有效的参考意见</div>
-        <div class="tiyanBox" style="width:25%;margin-left:-12.5%">
+        <a href="serveP.html#8" style="width:130px"><img src="img/icon8.png"></a>
+        <div class="iconWord1" style="font-size:28px">情感分析</div>
+        <div class="iconWord2" style="font-size: 24px">NLP为你提供真实有效的参考意见</div>
+        <div class="tiyanBox">
             <a href="serveP.html#8">
-                <span class="tiyan" style="color: #6cc1fb;font-size: 20px">立即体验</span>
+                <span class="tiyan" style="color: #6cc1fb;font-size: 24px">立即体验</span>
                 <img src="img/jiantouHover.png">
             </a>
         </div>
