--- a/public/serveP.html
+++ b/public/serveP.html
@@ -41,7 +41,7 @@ var _hmt = _hmt || [];
                 <div class="sanjiao" style="opacity: 1"></div>
                 <div class="underline" style="opacity: 1"></div>
             </a></li>
-            <li><a href="mainP.html">深源首页
+            <li><a href="indexP.html">深源首页
                 <div class="sanjiao" ></div>
                 <div class="underline" ></div>
             </a></li>
@@ -200,7 +200,7 @@ var _hmt = _hmt || [];
                 <li>以色列国防部代表称，以色列警方开枪是回应性措施。</li>
             </ul>
             <div class="card3Jian"></div>
-            <div class="card3Word2">核心观点：三名巴勒斯坦人攻击以色列人被以警方击毙</div>
+            <div class="card3Word2">核心观点：以方称开枪是回应性措施</div>
         </div>
         <div style="clear: both"></div>
     </div>
